# noctis

./: .gitignore  CMakeLists.txt  imgui.ini
engine/: CMakeLists.txt
engine/include/: engine.hpp
engine/include/core/: logger.hpp  resource.hpp
engine/include/platform/: platform.hpp
engine/src/: engine.cpp  noctis.cpp  noctis.hpp
engine/src/core/: Game.cpp  Game.hpp  IGameState.hpp  TestGameState.hpp  logger.cpp  logger.hpp  resource.cpp
engine/src/noctis/: EBus.hpp  Event.hpp  Game.cpp  Game.hpp  IGameState.hpp  Logger.cpp  Logger.hpp  Renderer.cpp  Renderer.hpp  TestGameState.cpp  logger.cpp  logger.hpp  stb_image.h
engine/src/noctis/events/: InputManager.cpp  InputManager.hpp  MouseMoveEvent.cpp  MouseMoveEvent.hpp  MousePressEvent.cpp  MousePressEvent.hpp  MouseReleaseEvent.cpp  MouseReleaseEvent.hpp  keycodes.hpp
engine/src/noctis/shaders/: compile.sh  shader.frag
engine/src/platform/: Platform.hpp  PlatformLinux.cpp  platform_linux.cpp
engine/src/render/: IRendererBackend.hpp  Renderer.cpp  Renderer.hpp
engine/src/render/vulkan/: VkTypes.hpp  VulkanBackend.cpp  VulkanBackend.hpp
testbed/: CMakeLists.txt
testbed/src/: main.cpp
